--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-property></app-property>
-
+  <app-events></app-events>
 </body>
 </html>
