two way binding | input and output with eventEmitter

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-events></app-events>
+  <app-two-way></app-two-way>
 </body>
 </html>
